<resources>
    <string name="resources_language">en</string>
    <string name="resources_country_code">US</string>
    <string name="resources_script">Latn</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="black_them">Black Theme</string>
    <string name="status_theme">Status.im Theme</string>
    <string name="notification_sync_init">Initializing service</string>
    <string name="notification_sync_in_progress">Synchronising…</string>
    <string name="notification_listening_for_events">Listening for events</string>
    <string name="notification_noisy_notifications">Noisy notifications</string>
    <string name="notification_silent_notifications">Silent notifications</string>
    <string name="title_activity_home">Messages</string>
    <string name="title_activity_room">Room</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_member_details">Member Details</string>
    <string name="title_activity_historical">Historical</string>
    <string name="title_activity_bug_report">Bug report</string>
    <string name="title_activity_group_details">Community details</string>
    <string name="title_activity_choose_sticker">Send a sticker</string>
    <string name="title_activity_keys_backup_setup">Key Backup</string>
    <string name="title_activity_keys_backup_restore">Use Key Backup</string>
    <string name="title_activity_verify_device">Verify session</string>
    <string name="keys_backup_is_not_finished_please_wait">Keys backup is not finished, please wait…</string>
    <string name="sign_out_bottom_sheet_warning_no_backup">You’ll lose your encrypted messages if you sign out now</string>
    <string name="sign_out_bottom_sheet_warning_backing_up">Key backup in progress. If you sign out now you’ll lose access to your encrypted messages.</string>
    <string name="sign_out_bottom_sheet_warning_backup_not_active">Secure Key Backup should be active on all of your sessions to avoid losing access to your encrypted messages.</string>
    <string name="sign_out_bottom_sheet_dont_want_secure_messages">I don’t want my encrypted messages</string>
    <string name="sign_out_bottom_sheet_backing_up_keys">Backing up keys…</string>
    <string name="keys_backup_activate">Use Key Backup</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="backup">Back up</string>
    <string name="sign_out_bottom_sheet_will_lose_secure_messages">You’ll lose access to your encrypted messages unless you back up your keys before signing out.</string>
    <string name="dialog_title_third_party_licences">Third party licences</string>
    <string name="loading">Loading…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="send">Send</string>
    <string name="resend">Resend</string>
    <string name="redact">Remove</string>
    <string name="quote">Quote</string>
    <string name="action_sign_out">Sign out</string>
    <string name="settings_profile_picture">Profile Picture</string>
    <string name="settings_display_name">Display Name</string>
    <string name="settings_keep_media">Keep media</string>
    <string name="settings_clear_cache">Clear cache</string>
    <string name="settings_clear_media_cache">Clear media cache</string>
    <string name="settings_user_settings">User settings</string>
    <string name="settings_other">Other</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_integrations">Integrations</string>
    <string name="settings_integrations_summary">Use an Integration Manager to manage bots, bridges, widgets and sticker packs.\nIntegration Managers receive configuration data, and can modify widgets, send room invites and set power levels on your behalf.</string>
    <string name="settings_cryptography">Cryptography</string>
    <string name="settings_cryptography_manage_keys">Cryptography Keys Management</string>
    <string name="settings_contact">Local contacts</string>
    <string name="settings_contacts_app_permission">Contacts permission</string>
    <string name="settings_contacts_phonebook_country">Phonebook country</string>
    <string name="settings_home_display">Home display</string>
    <string name="settings_pin_missed_notifications">Pin rooms with missed notifications</string>
    <string name="settings_pin_unread_messages">Pin rooms with unread messages</string>
    <string name="settings_inline_url_preview">Inline URL preview</string>
    <string name="settings_inline_url_preview_summary">Preview links within the chat when your homeserver supports this feature.</string>
    <string name="settings_send_typing_notifs">Send typing notifications</string>
    <string name="settings_send_typing_notifs_summary">Let other users know that you are typing.</string>
    <string name="settings_send_markdown">Markdown formatting</string>
    <string name="settings_send_markdown_summary">Format messages using markdown syntax before they are sent. This allows for advanced formatting such as using asterisks to display italic text.</string>
    <string name="settings_always_show_timestamps">Show timestamps for all messages</string>
    <string name="settings_12_24_timestamps">Show timestamps in 12-hour format</string>
    <string name="settings_show_read_receipts">Show read receipts</string>
    <string name="settings_show_read_receipts_summary">Click on the read receipts for a detailed list.</string>
    <string name="settings_show_room_member_state_events">Show room member state events</string>
    <string name="settings_show_room_member_state_events_summary">Includes invite/join/left/kick/ban events and avatar/display name changes.</string>
    <string name="settings_show_join_leave_messages">Show join and leave events</string>
    <string name="settings_show_join_leave_messages_summary">Invites, kicks, and bans are unaffected.</string>
    <string name="settings_show_avatar_display_name_changes_messages">Show account events</string>
    <string name="settings_show_avatar_display_name_changes_messages_summary">Includes avatar and display name changes.</string>
    <string name="settings_vibrate_on_mention">Vibrate when mentioning a user</string>
    <string name="settings_preview_media_before_sending">Preview media before sending</string>
    <string name="settings_send_message_with_enter">Send message with enter</string>
    <string name="settings_send_message_with_enter_summary">Enter button of the soft keyboard will send message instead of adding a line break</string>
    <string name="settings_secure_backup_section_title">Secure Backup</string>
    <string name="settings_secure_backup_setup">Set up Secure Backup</string>
    <string name="settings_secure_backup_section_info">Safeguard against losing access to encrypted messages &amp; data by backing up encryption keys on your server.</string>
    <string name="settings_deactivate_account_section">Deactivate account</string>
    <string name="settings_deactivate_my_account">Deactivate my account</string>
    <string name="settings_discovery_category">Discovery</string>
    <string name="settings_discovery_manage">Manage your discovery settings.</string>
    <string name="settings_analytics">Analytics</string>
    <string name="settings_opt_in_of_analytics">Send analytics data</string>
    <string name="settings_opt_in_of_analytics_summary">Element collects anonymous analytics to allow us to improve the application.</string>
    <string name="settings_logged_in">Logged in as</string>
    <string name="settings_home_server">Home Server</string>
    <string name="settings_identity_server">Identity Server</string>
    <string name="settings_integration_allow">Allow integrations</string>
    <string name="settings_integration_manager">Integration Manager</string>
    <string name="settings_user_interface">User interface</string>
    <string name="settings_interface_language">Language</string>
    <string name="settings_password">Password</string>
    <string name="settings_emails_and_phone_numbers_title">Emails and phone numbers</string>
    <string name="settings_emails_and_phone_numbers_summary">Manage emails and phone numbers linked to your Matrix account</string>
    <string name="settings_select_country">Choose a country</string>
    <string name="settings_media">Media</string>
    <string name="settings_default_compression">Default compression</string>
    <string name="settings_default_media_source">Default media source</string>
    <string name="settings_play_shutter_sound">Play shutter sound</string>
    <string name="room_settings_labs_warning_message">These are experimental features that may break in unexpected ways. Use with caution.</string>
    <string name="settings_theme">Theme</string>
    <string name="encryption_information_device_name">Public name</string>
    <string name="encryption_information_device_id">Session ID</string>
    <string name="encryption_information_device_key">Session key</string>
    <string name="encryption_export_e2e_room_keys">Export E2E room keys</string>
    <string name="encryption_export_room_keys_summary">Export the keys to a local file</string>
    <string name="encryption_message_recovery">Encrypted Messages Recovery</string>
    <string name="encryption_settings_manage_message_recovery_summary">Manage Key Backup</string>
    <string name="encryption_import_e2e_room_keys">Import E2E room keys</string>
    <string name="encryption_import_room_keys_summary">Import the keys from a local file</string>
    <string name="encryption_never_send_to_unverified_devices_title">Encrypt to verified sessions only</string>
    <string name="encryption_never_send_to_unverified_devices_summary">Never send encrypted messages to unverified sessions from this session.</string>
    <string name="font_size">Font size</string>
    <string name="settings_labs_native_camera">Use native camera</string>
    <string name="settings_labs_native_camera_summary">Start the system camera instead of the custom camera screen.</string>
    <string name="settings_info_area_show">Show the info area</string>
    <string name="settings_show_redacted">Show removed messages</string>
    <string name="settings_show_redacted_summary">Show a placeholder for removed messages</string>
    <string name="labs_swipe_to_reply_in_timeline">Enable swipe to reply in timeline</string>
    <string name="labs_show_unread_notifications_as_tab">Add a dedicated tab for unread notifications on main screen.</string>
    <string name="settings_category_timeline">Timeline</string>
    <string name="settings_category_composer">Message editor</string>
    <string name="encryption_information_cross_signing_state">Cross-Signing</string>
    <string name="encryption_information_dg_xsigning_complete">Cross-Signing is enabled\nPrivate Keys on device.</string>
    <string name="settings_hs_admin_e2e_disabled">Your server admin has disabled end-to-end encryption by default in private rooms &amp; Direct Messages.</string>
    <string name="settings_active_sessions_list">Active Sessions</string>
    <string name="settings_active_sessions_show_all">Show All Sessions</string>
    <string name="settings_security_prevent_screenshots_title">Prevent screenshots of the application</string>
    <string name="settings_security_prevent_screenshots_summary">Enabling this setting adds the FLAG_SECURE to all Activities. Restart the application for the change to take effect.</string>
    <string name="change_password_summary">Set a new account password…</string>
    <string name="settings_security_application_protection_title">Protect access</string>
    <string name="settings_security_application_protection_summary">Protect access using PIN and biometrics.</string>
</resources>