<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.blast.vinix.core.preference.VectorPreferenceCategory
        android:key="SETTINGS_USER_SETTINGS_PREFERENCE_KEY"
        android:title="@string/settings_user_settings">

        <com.blast.vinix.core.preference.UserAvatarPreference
            android:key="SETTINGS_PROFILE_PICTURE_PREFERENCE_KEY"
            android:title="@string/settings_profile_picture" />

        <com.blast.vinix.core.preference.VectorEditTextPreference
            android:key="SETTINGS_DISPLAY_NAME_PREFERENCE_KEY"
            android:persistent="false"
            android:title="@string/settings_display_name" />

        <com.blast.vinix.core.preference.VectorPreference
            android:key="SETTINGS_CHANGE_PASSWORD_PREFERENCE_KEY"
            android:summary="@string/change_password_summary"
            android:title="@string/settings_password" />

        <com.blast.vinix.core.preference.VectorPreference
            android:key="SETTINGS_EMAILS_AND_PHONE_NUMBERS_PREFERENCE_KEY"
            android:summary="@string/settings_emails_and_phone_numbers_summary"
            android:title="@string/settings_emails_and_phone_numbers_title"
            app:fragment="com.blast.vinix.features.settings.threepids.ThreePidsSettingsFragment" />

        <com.blast.vinix.core.preference.VectorPreference
            android:persistent="false"
            android:summary="@string/settings_discovery_manage"
            android:title="@string/settings_discovery_category"
            app:fragment="com.blast.vinix.features.discovery.DiscoverySettingsFragment" />

    </com.blast.vinix.core.preference.VectorPreferenceCategory>

    <com.blast.vinix.core.preference.VectorPreferenceCategory
        android:key="SETTINGS_CONTACT_PREFERENCE_KEYS"
        android:title="@string/settings_contact"
        app:isPreferenceVisible="@bool/false_not_implemented">

        <com.blast.vinix.core.preference.VectorSwitchPreference
            android:key="CONTACT_BOOK_ACCESS_KEY"
            android:title="@string/settings_contacts_app_permission" />

        <com.blast.vinix.core.preference.VectorPreference
            android:dialogTitle="@string/settings_select_country"
            android:key="SETTINGS_CONTACTS_PHONEBOOK_COUNTRY_PREFERENCE_KEY"
            android:title="@string/settings_contacts_phonebook_country" />

    </com.blast.vinix.core.preference.VectorPreferenceCategory>

    <com.blast.vinix.core.preference.VectorPreferenceCategory android:title="@string/settings_integrations">

        <com.blast.vinix.core.preference.VectorPreference
            android:focusable="false"
            android:persistent="false"
            android:summary="@string/settings_integrations_summary" />

        <com.blast.vinix.core.preference.VectorSwitchPreference
            android:key="SETTINGS_ALLOW_INTEGRATIONS_KEY"
            android:persistent="false"
            android:title="@string/settings_integration_allow" />

        <com.blast.vinix.core.preference.VectorPreference
            android:dependency="SETTINGS_ALLOW_INTEGRATIONS_KEY"
            android:key="SETTINGS_INTEGRATION_MANAGER_UI_URL_KEY"
            android:persistent="false"
            android:title="@string/settings_integration_manager" />

    </com.blast.vinix.core.preference.VectorPreferenceCategory>

    <com.blast.vinix.core.preference.VectorPreferenceCategory android:title="@string/settings_advanced">

        <com.blast.vinix.core.preference.VectorPreference
            android:key="SETTINGS_LOGGED_IN_PREFERENCE_KEY"
            android:title="@string/settings_logged_in"
            tools:summary="\@user:matrix.org" />

        <com.blast.vinix.core.preference.VectorPreference
            android:key="SETTINGS_HOME_SERVER_PREFERENCE_KEY"
            android:title="@string/settings_home_server"
            tools:summary="https://homeserver.org" />

        <com.blast.vinix.core.preference.VectorPreference
            android:key="SETTINGS_IDENTITY_SERVER_PREFERENCE_KEY"
            android:title="@string/settings_identity_server"
            app:fragment="com.blast.vinix.features.discovery.DiscoverySettingsFragment"
            tools:summary="https://identity.server.url" />

        <com.blast.vinix.core.preference.VectorPreference
            android:key="SETTINGS_CLEAR_MEDIA_CACHE_PREFERENCE_KEY"
            android:title="@string/settings_clear_media_cache" />

        <com.blast.vinix.core.preference.VectorPreference
            android:key="SETTINGS_CLEAR_CACHE_PREFERENCE_KEY"
            android:title="@string/settings_clear_cache" />

    </com.blast.vinix.core.preference.VectorPreferenceCategory>

    <com.blast.vinix.core.preference.VectorPreferenceCategory android:title="@string/action_sign_out">

        <com.blast.vinix.core.preference.VectorPreference
            android:key="SETTINGS_SIGN_OUT_KEY"
            android:title="@string/action_sign_out" />

    </com.blast.vinix.core.preference.VectorPreferenceCategory>

    <com.blast.vinix.core.preference.VectorPreferenceCategory android:title="@string/settings_deactivate_account_section">

        <com.blast.vinix.core.preference.VectorPreference
            android:key="SETTINGS_DEACTIVATE_ACCOUNT_KEY"
            android:persistent="false"
            android:title="@string/settings_deactivate_my_account"
            app:fragment="com.blast.vinix.features.settings.account.deactivation.DeactivateAccountFragment" />

    </com.blast.vinix.core.preference.VectorPreferenceCategory>

</androidx.preference.PreferenceScreen>