<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<com.blast.vinix.core.preference.VectorPreferenceCategory-->
    <!--android:key="SETTINGS_LABS_PREFERENCE_KEY"-->
    <!--android:title="@string/room_settings_labs_pref_title">-->

    <com.blast.vinix.core.preference.VectorPreference
        android:focusable="false"
        android:key="labs_warning"
        android:summary="@string/room_settings_labs_warning_message" />

    <!--<com.blast.vinix.core.preference.VectorSwitchPreference-->
    <!--android:key="SETTINGS_ROOM_SETTINGS_LABS_END_TO_END_PREFERENCE_KEY"-->
    <!--android:title="@string/room_settings_labs_end_to_end" />-->

    <!--<com.blast.vinix.core.preference.VectorPreference-->
    <!--android:focusable="false"-->
    <!--android:key="SETTINGS_ROOM_SETTINGS_LABS_END_TO_END_IS_ACTIVE_PREFERENCE_KEY"-->
    <!--android:title="@string/room_settings_labs_end_to_end_is_active" />-->

    <!--<com.blast.vinix.core.preference.VectorSwitchPreference-->
    <!--android:key="SETTINGS_DATA_SAVE_MODE_PREFERENCE_KEY"-->
    <!--android:summary="@string/settings_data_save_mode_summary"-->
    <!--android:title="@string/settings_data_save_mode" />-->

    <!--<com.blast.vinix.core.preference.VectorSwitchPreference-->
    <!--android:defaultValue="true"-->
    <!--android:key="SETTINGS_USE_JITSI_CONF_PREFERENCE_KEY"-->
    <!--android:title="@string/settings_labs_create_conference_with_jitsi" />-->

    <!--<com.blast.vinix.core.preference.VectorSwitchPreference-->
    <!--android:key="SETTINGS_ENABLE_SEND_VOICE_FEATURE_PREFERENCE_KEY"-->
    <!--android:summary="@string/settings_labs_enable_send_voice_summary"-->
    <!--android:title="@string/settings_labs_enable_send_voice" />-->

    <com.blast.vinix.core.preference.VectorSwitchPreference
        android:defaultValue="true"
        android:key="SETTINGS_LABS_ENABLE_SWIPE_TO_REPLY"
        android:title="@string/labs_swipe_to_reply_in_timeline" />

    <com.blast.vinix.core.preference.VectorSwitchPreference
        android:defaultValue="false"
        android:key="SETTINGS_LABS_UNREAD_NOTIFICATIONS_AS_TAB"
        android:title="@string/labs_show_unread_notifications_as_tab" />
    <!--</com.blast.vinix.core.preference.VectorPreferenceCategory>-->

</androidx.preference.PreferenceScreen>